<resources>
    <string name="app_name">StudyDemo</string>
    <string name="str_android">我对Android很痴迷!</string>
    <string name="click_change_bg_color">点击我改变文本背景颜色</string>
    <string name="input_pwd">请输入密码：</string>
    <string name="submit">确定</string>
    <string name="please_choose_music">请选择播放的歌曲</string>
    <string name="music_1">荷塘月色----凤凰传奇</string>
    <string name="music_2">白狐----陈瑞</string>
    <string name="music_3">青花瓷----周杰伦</string>
    <string name="get_chose">获取选项值</string>
    <string name="input_your_name">请输入您的姓名：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="name">姓名:</string>
    <string name="sex">性别:</string>
    <string name="address">家庭住址:</string>
    <string name="phone">联系电话:</string>
    <string name="pre_picture">上一张</string>
    <string name="next_picture">下一张</string>
    <string name="date">日期时间</string>
    <string name="dialog">对话框</string>
    <string name="context_menu">上下文菜单</string>
    <string name="main_report2">主页面</string>
    <string name="show_date_dialog">弹出日期对话框</string>
    <string name="show_time_dialog">弹出时间对话框</string>
    <string name="music_player">音乐播放器</string>
    <string name="media_player">media播放器</string>
    <string name="video_player">媒体播放器</string>
    <string name="audio_change">音量调节</string>

    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="del">del</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="clear">C</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="equals">=</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="remainder">%</string>
    <string name="pow">^</string>
    <string name="left_parenthesis">(</string>
    <string name="right_parenthesis">)</string>
</resources>
