<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:rowCount="4">

    <Button
        android:id="@+id/btn_seven"
        style="@style/CalculateButton"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:text="@string/seven"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/btn_eight"
        style="@style/CalculateButton"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:text="@string/eight"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/btn_nine"
        style="@style/CalculateButton"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:text="@string/nine"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/btn_del"
        style="@style/CalculateButton"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:text="@string/del"
        android:textColor="@android:color/holo_orange_dark"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/btn_four"
        style="@style/CalculateButton"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:text="@string/four"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/btn_five"
        style="@style/CalculateButton"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:text="@string/five"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/btn_six"
        style="@style/CalculateButton"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:text="@string/six"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/btn_clear"
        style="@style/CalculateButton"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:text="@string/clear"
        android:textColor="@android:color/holo_orange_dark"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/btn_one"
        style="@style/CalculateButton"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:text="@string/one"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/btn_two"
        style="@style/CalculateButton"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:text="@string/two"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/btn_three"
        style="@style/CalculateButton"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:text="@string/three"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/btn_equals"
        style="@style/CalculateButton"
        android:layout_row="2"
        android:layout_rowSpan="2"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_vertical"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/equals"
        android:textColor="@android:color/white"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/btn_zero"
        style="@style/CalculateButton"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:text="@string/zero"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/btn_point"
        style="@style/CalculateButton"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:text="@string/point"
        tools:targetApi="lollipop" />

</GridLayout>
