<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp_8"
        android:paddingRight="@dimen/dp_8"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_choose_music"/>

        <CheckBox
            android:id="@+id/cb_music1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/music_1"/>

        <CheckBox
            android:id="@+id/cb_music2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/music_2"/>

        <CheckBox
            android:id="@+id/cb_music3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/music_3"/>

        <Button
            android:id="@+id/btn_chose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_chose"/>

        <TextView
            android:id="@+id/tv_chose_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_8"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/colorPrimary"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_16"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_your_name"/>

        <EditText
            android:id="@+id/et_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/radio_group_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"/>

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"/>
        </RadioGroup>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"/>

        <TextView
            android:id="@+id/tv_chose_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</ScrollView>
